Fixes distortion problem with exp report primary photo

--- a/docroot/sites/all/themes/ilr_theme/scss/components/_experience_report.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_experience_report.scss
@@ -121,7 +121,7 @@ article.node-experience-report {
         text-align: left;
       }
       .field-name-field-image {
-        @include grid-span (4,7);
+        @include grid-span (6,7);
         text-align: left;
         img {
           position: relative;
